--- a/index.html
+++ b/index.html
@@ -13,43 +13,57 @@
         <nav>
             <div id="nav">
                 <a href="index.html"><img src="img/LOGO2.png" alt="logo"></a>
-                <div>
-                    <button id="project-chose-button"><p>Project</p></button>
-                    <button id="group"><p>社群</p></button>
+                <div class="choose"><!-- 增加class -->
+                    <div id="project-chose-button"><p>Project</p></div>
+                    <div id="group"><p>社群</p></div><!-- 修改div -->
                 </div>
                 <button id="hamber-button"><img src="img/hamburger menu button.png" alt=""></button>
             </div>
         </nav>
         <div id="social-media-bar">
             <ul>
-                <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
-                <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
-                <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
+                <div>
+                    <li><a href="https://www.facebook.com/NCYU.DEDM.GraduationExhibition?locale=zh_TW"><img src="img/fb.png" alt="Facebook"></a></li>
+                    <li><a href="instagram.com/dedm_expo"><img src="img/ig.png" alt="Instagram"></a></li>
+                    <li><a href="https://www.youtube.com/@%E4%BD%8E%E8%91%97%E9%A0%ADDIGITAL"><img src="img/yt.png" alt="YouTube"></a></li>
+                </div>
             </ul>
         </div>
         <div id="Project-page">
             <div id="Project-page1">
-                <img id="Project-page-img" src="img/button BG (1).png" alt="">
+                <!-- <img id="Project-page-img" src="img/button BG (1).png" alt=""> -->
                 <div id="project-chose">
-                    <h2 id="h2-1">漫遊海海知識</h2>
-                    <img id="line1" src="img/Rectangle 21.png" alt="">
-                    <button id="history"><a href="project.html"><p>寶島征途</p></a></button>
-                    <button id="young"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
-                    <button id="tower"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
-                    <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
-                    <h2 id="h2-2">超現實探索指南</h2>
-                    <img id="line2" src="img/Rectangle 21.png" alt="">
-                    <button id="recycle"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
-                    <button id="river"><a href="project1.html"><p>貓愁溪</p></a></button>
-                    <button id="witch"><a href="project1.html"><p>劍巫</p></a></button>
-                    <button id="heart"><a href="project1.html"><p>Crossroads</p></a></button>
-                    <h2 id="h2-3">指尖 Z Power</h2>
-                    <img id="line3" src="img/Rectangle 21.png" alt="">
-                    <button id="rock"><a href="project2.html"><p>永恆之石的傳奇</p></a></button>
-                    <button id="food"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
-                    <button id="Play"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
-                    <button id="mushroom"><a href="project2.html"><p>菇義</p></a></button>
-                    <button id="music"><a href="project2.html"><p>潮言搖擺</p></a></button>
+                    <div>
+                        <h2 id="h2-1">漫遊海海知識</h2>
+                        <img id="line1" src="img/Rectangle 21.png" alt="">
+                        <div class="project-cont">
+                            <button id="history"><a href="project.html"><p>寶島征途</p></a></button>
+                            <button id="young"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
+                            <button id="tower"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
+                            <button id="school"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
+                        </div>
+                    </div>
+                    <div>
+                        <h2 id="h2-2">超現實探索指南</h2>
+                        <img id="line2" src="img/Rectangle 21.png" alt="">
+                        <div class="project-cont">
+                            <button id="recycle"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
+                            <button id="river"><a href="project1.html"><p>貓愁溪</p></a></button>
+                            <button id="witch"><a href="project1.html"><p>劍巫</p></a></button>
+                            <button id="heart"><a href="project1.html"><p>Crossroads</p></a></button>
+                        </div>                        
+                    </div>                    
+                    <div>
+                        <h2 id="h2-3">指尖 Z Power</h2>
+                        <img id="line3" src="img/Rectangle 21.png" alt="">
+                        <div class="project-cont">
+                            <button id="rock"><a href="project2.html"><p>永恆之石的傳奇</p></a></button>
+                            <button id="food"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
+                            <button id="Play"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
+                            <button id="mushroom"><a href="project2.html"><p>菇義</p></a></button>
+                            <button id="music"><a href="project2.html"><p>潮言搖擺</p></a></button>
+                        </div>                        
+                    </div>
                     <button id="close"><img src="img/close 1.png" alt=""></button>
                 </div>
             </div>
@@ -64,48 +78,27 @@
                 </div>
             </ul>    
         </div>
-        <div id="hamber-project">
-            <ul>
-                <button id="back"><img src="img/hamburger menu button (1).png" alt=""></button>
-                <h3 id="h3-1">漫遊海海知識</h2>
-                <button id="history-1"><a href="project.html"><p>寶島征程</p></a></button>
-                <button id="young-1"><a href="project.html"><p>YoungBlood<br>長青體數能</p></a></button>
-                <button id="tower-1"><a href="project.html"><p>遺忘之城的秘密</p></a></button>
-                <button id="school-1"><a href="project.html"><p>校園迷蹤Campus Quest</p></a></button>
-                <h3 id="h3-2">超現實探索指南</h2>
-                <button id="recycle-1"><a href="project1.html"><p>NoAh's CHAOS</p></a></button>
-                <button id="river-1"><a href="project1.html"><p>貓愁溪</p></a></button>
-                <button id="witch-1"><a href="project1.html"><p>劍巫</p></a></button>
-                <button id="heart-1"><a href="project1.html"><p>Crossroads</p></a></button>
-                <h3 id="h3-3">指尖 Z Power</h2>
-                <button id="rock-1"><a href="project2.html"><p>永恆之石的傳奇</p></a></button>
-                <button id="food-1"><a href="project2.html"><p>菜鳥食驗嘉</p></a></button>
-                <button id="Play-1"><a href="project2.html"><p>老闆，嘉義碗</p></a></button>
-                <button id="mushroom-1"><a href="project2.html"><p>菇義</p></a></button>
-                <button id="music-1"><a href="project2.html"><p>潮言搖擺</p></a></button>
-            </ul>    
-        </div>
     </header>
-    
+    <!-- img包入background-black -->
     <div id="video-container">
         <div id="video-content">
-            <div id="background-black"></div>
-            <img id="background-image" src="img/image (1).png" alt="Background">
-            <a href="https://youtu.be/2l8-HyEyWrQ?si=ryt3uzRC0VtIDvcP"><img id="play-button" src="img/IMG_0054 1.png" alt="Play Button">
-            <img id="scroll-image" src="img/SCROLL.png" alt="Scroll Indicator"></a>
-            <img id="point-image" src="img/Vector 14.svg" alt="Point Indicator">
+            <div id="background-black"><img id="background-image" src="img/image (1).png" alt="Background">
+                <a href="https://youtu.be/2l8-HyEyWrQ?si=ryt3uzRC0VtIDvcP"><img id="play-button" src="img/IMG_0054 1.png" alt="Play Button">
+                <img id="scroll-image" src="img/SCROLL.png" alt="Scroll Indicator"></a>
+                <img id="point-image" src="img/Vector 14.svg" alt="Point Indicator">
+            </div>
         </div>
     </div>
-    
+    <!-- add p class -->
     <div id="info-container">
         <div id="info-section-1">
             <div id="info-content-1">
                 <img id="info-decorative-image" src="img/img4.png" alt="Decorative Image">
                 <div id="info-details">
                     <ul>
-                        <li><h2>低著頭 DIGITAL</h2></li>
+                        <li><p class="title">低著頭 DIGITAL</p></li>
                         <li>
-                            <p>
+                            <p class="content">
                                 我們如微光聚集<br/>
                                 創意在廣闊的無限中閃耀<br/>
                                 色彩編織出獨特的幻影<br/>
@@ -125,31 +118,46 @@
             <div id="exhibition-options">
                 <img id="Tab-bar" src="img/Tab Bar BG.png">
                 <img id="Rectangle" src="img/Rectangle 20.png" alt="">
-                <button id="place1"><p>校內展</p></button>
-                <button id="place2"><p>校外展</p></button>
+                <div>
+                    <button id="place1"><p>校內展</p></button>
+                    <button id="place2"><p>校外展</p></button>
+                </div>
+                <img id="Rectangle-phone" src="img/Rectangle 9.png" alt="">
             </div>
             <div id="info-content-2">
                 <div id="place-info1">
-                    <h2>展覽資訊</h2>
+                    <p class="place-title">展覽資訊</p><!-- 原h2 -->               
                     <img id="map" src="img/Map image.png" alt="">
-                    <p id="name">地點</p>
-                    <p id="name1">國立嘉義大學民雄校區教育館</p>
-                    <p id="date1">2024 . 12 . 25</p>
-                    <p id="date">日期</p>
-                    <p id="location">地點</p>
-                    <p id="location1">621 嘉義縣民雄鄉文隆村85號</p>
+                    <div>
+                        <p id="name">地點</p>
+                        <p id="name1">國立嘉義大學民雄校區教育館</p>
+                    </div>           
+                    <div>   
+                        <p id="date">日期</p>
+                        <p id="date1">2024 . 12 . 25</p>
+                    </div>
+                    <div>
+                        <p id="location">地點</p>
+                        <p id="location1">621 嘉義縣民雄鄉文隆村85號</p>   
+                    </div>                                   
                     <a id="map-link1" href="https://maps.app.goo.gl/MJbrGi9WgKxvMSmc9"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map1" src="img/sitemap.jpg" alt="map">
                 </div>
                 <div id="place-info2">
                     <img id="map" src="img/螢幕擷取畫面 2025-05-06 092922.png" alt="">
-                    <h2>展覽資訊</h2>
-                    <p id="name">地點</p>
-                    <p id="name2">高雄展覽館</p>
-                    <p id="date">日期</p>
-                    <p id="location">地點</p>
-                    <p id="date2">2025 . 05 . 15 - 2025 . 05 .17</p>
-                    <p id="location2">806高雄市前鎮區成功二路39號</p>
+                    <p class="place-title">展覽資訊</p>
+                    <div>
+                        <p id="name">地點</p>
+                        <p id="name2">高雄展覽館</p>
+                    </div>
+                    <div>
+                        <p id="date">日期</p>
+                        <p id="date2">2025 . 05 . 15 - 2025 . 05 .17</p>
+                    </div>
+                    <div>
+                        <p id="location">地點</p>
+                        <p id="location2">806高雄市前鎮區成功二路39號</p>
+                    </div>                    
                     <a id="map-link2" href="https://maps.app.goo.gl/KagbVqLJzzu8fZAG9"><img src="img/IMG_0051 1.png" alt="link"></a>
                     <img id="map2" src="img/image 1.png" alt="map">
                 </div>
@@ -202,7 +210,7 @@
                     <img id="shop-description7" src="img/周邊4.png" alt="">
                     <a href="https://forms.gle/rdNdrN8NatcDNw4T6"><img id="buy" src="img/Group 7.png" alt=""></a>
                     <img id="light3" src="img/Ellipse 6 (1).png" alt="light">
-                    <!-- <img id="light4" src="img/Ellipse 5 (1).png" alt=""> -->
+                    <img id="light4" src="img/Ellipse 5 (1).png" alt="">
                 </div>
             </div>
         </div>
@@ -232,5 +240,4 @@
 <script src="index.js"></script>
 <script src="load.js"></script>
 <script src="scroll.js"></script>
-<script src="project.js"></script>
 </html>
