--- a/project.html
+++ b/project.html
@@ -82,18 +82,16 @@
 
     <div id="chose">
         <div id="black"></div>
-        <div id="chose-container">
-            <button><img id="button-left" src="img-project/左切換.png" alt="button-left"></button>
-            <button><img id="button-right" src="img-project/右切換.png" alt="button-right"></button>
-            <img id="project1" src="img-project/海報.jpg" alt="project1">
-            <img id="project2" src="img-project/project2.png" alt="project2">
-            <img id="project3" src="img-project/Treasure Island Journey_A4.jpg" alt="project3">
-            <img id="project4" src="img-project/YOUNGBLOOD(A4).png" alt="project4">
-            <button><img id="bar-left" src="img-project/Vector 23-1.png" alt=""><img id="table" src="img-project/桌遊.png"></button>
-            <button><img id="bar-mid" src="img-project/Rectangle 16.png" alt=""><img id="PC" src="img-project/PC.png"></button>
-            <button><img id="bar-right" src="img-project/Vector 23.png" alt=""><img id="index" src="img-project/網站.png"></button>
-            <img id="description1" src="img-project/作品1.png" alt="">
-        </div>
+        <button><img id="button-left" src="img-project/左切換.png" alt="button-left"></button>
+        <button><img id="button-right" src="img-project/右切換.png" alt="button-right"></button>
+        <img id="project1" src="img-project/海報.jpg" alt="project1">
+        <img id="project2" src="img-project/project2.png" alt="project2">
+        <img id="project3" src="img-project/Treasure Island Journey_A4.jpg" alt="project3">
+        <img id="project4" src="img-project/YOUNGBLOOD(A4).png" alt="project4">
+        <a href="project.html" id="p1"><img id="bar-left" src="img-project/Vector 23-1.png" alt=""><p>漫遊海海知識</p></a>
+        <a href="project1.html" id="p2"><img id="bar-mid" src="img-project/Rectangle 16.png" alt=""><p>超現實探索指南</p></a>
+        <a href="project2.html" id="p3"><img id="bar-right" src="img-project/Vector 23.png" alt=""><p>指尖 Z Power</p></a>
+        <img id="description1" src="img-project/作品1.png" alt="">
     </div>
     <div id="project-container1">
         <div class="project-container-1">
