--- a/project.html
+++ b/project.html
@@ -141,39 +141,45 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/school/IMG_0937.JPG" alt="">
                     <h2>楊舒茗</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>遊戲企劃</p>
+                    <button onclick="showText(this)" data-text="ashelyyang068@gmail.com" data-target="#work-text1"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="影響新劇場16歲少年扮戲第十屆製作助理2024嘉大業大提案競賽第三名"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="campsite.bio/ashu616_"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="沒有獵人卡包的美妝博主烈焰之咆哮的頭號粉絲"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/school/S__3793014.jpg" alt="">
                     <h2>宋書佑</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>介面設計</p>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="squirrelyo0514@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="2024嘉大業大提案競賽參賽者"><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="Kactecm的火熱好友哥布林的地下情人"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-3">
                     <img class="menber-img" src="team/school/DSC0161.JPG" alt="">
                     <h2>朱承育</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
+                    <p>藝術總監</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="kevin.oneill888@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="嘉義洞窟哥布林念念的榜一大哥"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div>
                  </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/school/圖片_20241027232412.jpg" alt="">
                     <h2>張育禎</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="niannnn0921@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="各式濾鏡擁有者中國榜一女主播"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text4" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -221,39 +227,45 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/tower/IMG_4244.JPG 的副本.jpg" alt="">
                     <h2>李証瑋</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>組長</p>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="f0921464917@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="不會講話的人討厭的摩羯男"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/tower/IMG_0948.JPG" alt="">
                     <h2>洪堯荃</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>文本作家</p>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="a0987774007@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="國小短跑金牌、會考5A2024嘉大業大提案競賽第三名"><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="范玉欣的狗念念的榜二大哥"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-3">
                     <img class="menber-img" src="team/tower/IMG_1025.JPG" alt="">
                     <h2>吳佳恩</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
+                    <p>場景設計</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="酒吧出葉家未來潛水執照擁有者"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div>
                  </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/tower/IMG_5520.JPG" alt="">
                     <h2>邱顗年</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>腳本設計</p>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text4" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -307,39 +319,45 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/history/IMG_7557.JPG" alt="">
                     <h2>謝儀蓁</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text1" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text1" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="team/history/IMG_3456.jpg" alt="">
                     <h2>何貞禎</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>美術設計</p>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text2" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text2" class="work-text"><h4></h4></div>
                 </div>
                 <div class="menber" id="menber-3">
                     <img class="menber-img" src="team/history/IMG_3446.JPG" alt="">
                     <h2>林煜家</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
+                    <p>遊戲資料整理</p>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text3" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text3" class="work-text"><h4></h4></div>
                  </div>
                 <div class="menber" id="menber-4">
                     <img class="menber-img" src="team/history/IMG_5955.JPG" alt="">
                     <h2>黃鉦詠</h2>
-                    <p>負責工作</p>
-                    <img class="work-1" src="img-project/mail 1.png" alt="">
-                    <img class="work-2" src="img-project/text-file 1.png" alt="">
-                    <img class="work-3" src="img-project/open-folder 1.png" alt="">
-                    <img class="work-4" src="img-project/chat 2.png" alt="">
+                    <p>遊戲企劃</p>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="treasure9090@gmail.com"><img class="work-1" src="img-project/mail 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><br><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text=""><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
+                    <button onclick="showText(this)" data-target="#work-text4" data-text="一直秒倒的黎明殺機玩家"><img class="work-4" src="img-project/chat 2.png" alt=""></button>
+                    <div id="work-text4" class="work-text"><h4></h4></div>
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
@@ -394,7 +412,7 @@
                 <div class="menber" id="menber-1">
                     <img class="menber-img" src="team/young/形象照(已修.jpg" alt="">
                     <h2>黃旭崙</h2>
-                    <p>負責工作</p>
+                    <p>美術設計、卡牌設計</p>
                     <button><img class="work-1" src="img-project/mail 1.png" alt=""></button>
                     <button><img class="work-2" src="img-project/text-file 1.png" alt=""></button>
                     <button><img class="work-3" src="img-project/open-folder 1.png" alt=""></button>
@@ -403,14 +421,14 @@
                 <div class="menber" id="menber-2">
                     <img class="menber-img" src="img-project/Member Photo.png" alt="">
                     <h2>釀恩‧塔給鹿敦</h2>
-                    <p>負責工作</p>
+                    <p>美術設計、卡牌設計</p>
                     <img class="work-1" src="img-project/mail 1.png" alt="">
                     <img class="work-2" src="img-project/text-file 1.png" alt="">
                     <img class="work-3" src="img-project/open-folder 1.png" alt="">
                     <img class="work-4" src="img-project/chat 2.png" alt="">
                 </div>
                 <img class="light-4" src="img-project/Ellipse 7.png" alt="">
-                <img class="description-5" src="img-project/周邊4 (2).png" alt="">
+                <!-- <img class="description-5" src="img-project/周邊4 (2).png" alt=""> -->
             </div>
         </div>
     </div>
